ompi/mpi/f03/mpi.f03


integer(C_INT) function &
MPI_Request_get_status(request, flag, status, ierr) &
  BIND(C, name="MPI_Request_get_status")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: request
  integer, value, intent(out) :: flag
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
end function MPI_Request_get_status

end interface MPI_Request_get_status


interface MPI_Rsend

integer(C_INT) function &
MPI_Rsend(ibuf, count, datatype, dest, tag, comm, ierr) &
  BIND(C, name="MPI_Rsend")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: ibuf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Rsend

end interface MPI_Rsend


interface MPI_Rsend_init

integer(C_INT) function &
MPI_Rsend_init(buf, count, datatype, dest, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Rsend_init")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Rsend_init

end interface MPI_Rsend_init


interface MPI_Scan

integer(C_INT) function &
MPI_Scan(sendbuf, recvbuf, count,
         datatype, op, comm, ierr) &
  BIND(C, name="MPI_Scan")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: op
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Scan

end interface MPI_Scan


interface MPI_Scatter

integer(C_INT) function &
MPI_Scatter(sendbuf, sendcount, sendtype,
            recvbuf, recvcount, recvtype,
            root, comm, ierr) &
  BIND(C, name="MPI_Scatter")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), value, intent(in) :: sendcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: sendtype
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: recvcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: recvtype
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Scatter

end interface MPI_Scatter


interface MPI_Scatterv

integer(C_INT) function &
MPI_Scatterv(sendbuf, sendcounts, displs, sendtype,
             recvbuf, recvcount, recvtype,
             root, comm, ierr) &
  BIND(C, name="MPI_Scatterv")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), dimension(*), value, intent(in) :: sendcounts
  integer(INT_C), dimension(*), value, intent(in) :: displs
  integer(MPI_HANDLE_KIND), value, intent(in) :: sendtype
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: recvcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: recvtype
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Scatterv

end interface MPI_Scatterv


interface MPI_Send

integer(C_INT) function &
MPI_Send(buf, count, datatype, dest, tag, comm, ierr) &
  BIND(C, name="MPI_Send")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Send

end interface MPI_Send


interface MPI_Send_init

integer(C_INT) function &
MPI_Send_init(buf, count, datatype, dest, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Send_init")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Send_init

end interface MPI_Send_init


interface MPI_Sendrecv_replace

integer(C_INT) function &
MPI_Sendrecv_replace(buf, count, datatype, dest, sendtag, source, recvtag, &
        comm, status, ierr) &
  BIND(C, name="MPI_Sendrecv_replace")
  use MPI_C_BINDING
  type(C_PTR), value, intent(inout) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: sendtag
  integer(INT_C), value, intent(in) :: source
  integer(INT_C), value, intent(in) :: recvtag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
end function MPI_Sendrecv_replace

end interface MPI_Sendrecv_replace


interface MPI_SIZEOF

integer(C_INT) function &
MPI_SIZEOF(x, size, ierr) &
  BIND(C, name="MPI_SIZEOF")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: x
  integer(INT_C), value, intent(out) :: size
end function MPI_SIZEOF

end interface MPI_SIZEOF


interface MPI_Ssend

integer(C_INT) function &
MPI_Ssend(buf, count, datatype, dest, tag, comm, ierr) &
  BIND(C, name="MPI_Ssend")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Ssend

end interface MPI_Ssend


interface MPI_Ssend_init

integer(C_INT) function &
MPI_Ssend_init(buf, count, datatype, dest, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Ssend_init")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Ssend_init

end interface MPI_Ssend_init


interface MPI_Start

integer(C_INT) function &
MPI_Start(request, ierr) &
  BIND(C, name="MPI_Start")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: request
end function MPI_Start

end interface MPI_Start


interface MPI_Startall

integer(C_INT) function &
MPI_Startall(count, array_of_requests, ierr) &
  BIND(C, name="MPI_Startall")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), dimension(*), value, intent(inout) :: array_of_requests
end function MPI_Startall

end interface MPI_Startall


interface MPI_Status_set_cancelled

integer(C_INT) function &
MPI_Status_set_cancelled(status, flag, ierr) &
  BIND(C, name="MPI_Status_set_cancelled")
  use MPI_C_BINDING
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
  integer, value, intent(in) :: flag
end function MPI_Status_set_cancelled

end interface MPI_Status_set_cancelled


interface MPI_Status_set_elements

integer(C_INT) function &
MPI_Status_set_elements(status, datatype, count, ierr) &
  BIND(C, name="MPI_Status_set_elements")
  use MPI_C_BINDING
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: count
end function MPI_Status_set_elements

end interface MPI_Status_set_elements


interface MPI_Test

integer(C_INT) function &
MPI_Test(request, flag, status, ierr) &
  BIND(C, name="MPI_Test")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: request
  integer, value, intent(out) :: flag
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
end function MPI_Test

end interface MPI_Test


interface MPI_Test_cancelled

integer(C_INT) function &
MPI_Test_cancelled(status, flag, ierr) &
  BIND(C, name="MPI_Test_cancelled")
  use MPI_C_BINDING
  integer(MPI_STATUS_SIZE), value, intent(in) :: status
  integer, value, intent(out) :: flag
end function MPI_Test_cancelled

end interface MPI_Test_cancelled


interface MPI_Testall

integer(C_INT) function &
MPI_Testall(count, array_of_requests, flag, array_of_statuses, ierr) &
  BIND(C, name="MPI_Testall")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), dimension(*), value, intent(inout) :: array_of_requests
  integer, value, intent(out) :: flag
  integer(MPI_STATUS_SIZE), dimension(*), value, intent(inout) :: array_of_statuses
end function MPI_Testall

end interface MPI_Testall


interface MPI_Testany

integer(C_INT) function &
MPI_Testany(count, array_of_requests, index, flag, status, ierr) &
  BIND(C, name="MPI_Testany")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), dimension(*), value, intent(inout) :: array_of_requests
  integer(INT_C), value, intent(out) :: index
  integer, value, intent(out) :: flag
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
end function MPI_Testany

end interface MPI_Testany


interface MPI_Testsome

integer(C_INT) function &
MPI_Testsome(incount, array_of_requests, outcount, array_of_indices, array_of_statuses, ierr) &
  BIND(C, name="MPI_Testsome")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: incount
  integer(MPI_HANDLE_KIND), dimension(*), value, intent(inout) :: array_of_requests
  integer(INT_C), value, intent(out) :: outcount
  integer(INT_C), dimension(*), value, intent(out) :: array_of_indices
  integer(MPI_STATUS_SIZE), dimension(*), value, intent(inout) :: array_of_statuses
end function MPI_Testsome

end interface MPI_Testsome


interface MPI_Topo_test

integer(C_INT) function &
MPI_Topo_test(comm, status, ierr) &
  BIND(C, name="MPI_Topo_test")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(out) :: status
end function MPI_Topo_test

end interface MPI_Topo_test


interface MPI_Type_commit

integer(C_INT) function &
MPI_Type_commit(type, ierr) &
  BIND(C, name="MPI_Type_commit")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: type
end function MPI_Type_commit

end interface MPI_Type_commit


interface MPI_Type_contiguous

integer(C_INT) function &
MPI_Type_contiguous(count, oldtype, newtype, ierr) &
  BIND(C, name="MPI_Type_contiguous")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: oldtype
  integer(MPI_HANDLE_KIND), value, intent(out) :: newtype
end function MPI_Type_contiguous

end interface MPI_Type_contiguous


interface MPI_Type_create_darray

integer(C_INT) function &
MPI_Type_create_darray(size, rank, ndims, gsize_array, distrib_array, darg_array, psize_array, &
        order, oldtype, newtype, ierr) &
  BIND(C, name="MPI_Type_create_darray")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: size
  integer(INT_C), value, intent(in) :: rank
  integer(INT_C), value, intent(in) :: ndims
  integer(INT_C), dimension(*), value, intent(in) :: gsize_array
  integer(INT_C), dimension(*), value, intent(in) :: distrib_array
  integer(INT_C), dimension(*), value, intent(in) :: darg_array
  integer(INT_C), dimension(*), value, intent(in) :: psize_array
  integer(INT_C), value, intent(in) :: order
  integer(MPI_HANDLE_KIND), value, intent(in) :: oldtype
  integer(MPI_HANDLE_KIND), value, intent(out) :: newtype
end function MPI_Type_create_darray

end interface MPI_Type_create_darray


interface MPI_Type_create_f90_complex
